--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ Pygments==2.15.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
-pywin32==306
+pywin32
 pyzmq==25.0.2
 scikit-learn==1.0.2
 scipy==1.7.3
